app/index.css
/* ... */
.pref-item-input {
  margin-left: auto;
  max-width: 12rem;
  display: flex;
}

.pref-item > .spinner {
  max-width: 3rem;
}

.pref-item .spinner-input {
  text-align: right;
  height: 1.3rem;
}

.pref-keybind .icon,
.pref-item > .icon {
  margin-left: 0.25rem;
  display: block;
  bottom: 0.6rem;
  backface-visibility: hidden;
  filter: brightness(0.5);
  cursor: pointer;
}

.pref-keybind .icon:hover,
.pref-item .icon:hover {
  filter: brightness(1);
  color: var(--danger);
}

.pref-keybind-label {
  padding: 0.125rem 0;
}

.pref-label {
  padding: 0.6rem 0;
}

.pref-keybind-combos {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.2rem;
  margin-left: auto;
}

.pref-keybind-combo {
  background-color: rgba(0, 0, 0, 0.2);
  padding: 0.125rem 0.25rem;
  font-size: 0.8rem;
}

.pref-keybind-combo.conflict {
  background: rgb(187, 93, 31);
}

.pref-keybind-combo:hover {
  background-color: var(--danger);
}

.pref-group-label {
  font-size: 1.2rem;
  margin-bottom: 0.4rem;
}

.pref-subgroup-label {
  font-weight: bold;
  margin-bottom: 0.4rem;
}

.pref-group {
  padding: 0.2rem 0.25rem;
}

.pref-children .pref-group-label {
  font-size: 1.1rem;
}

.pref-search .dropdown {
  width: 4.25rem;
}

.pref-group-label + .pref-children {
  margin-left: 1rem;
}

.pref-children {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
}

.pref-subgroup {
  margin: 0.5rem 0;
}

.detail {
  font-size: 0.75rem;
  font-style: italic;
  text-align: center;
  color: var(--text-color-detail);
}

.tippy-box[data-theme~="sm"] {
  background-color: var(--tooltip-bg);
  color: var(--text-color);
}

.tippy-box[data-theme~="sm"][data-placement^="top"] > .tippy-arrow::before {
  border-top-color: var(--tooltip-bg);
}
.tippy-box[data-theme~="sm"][data-placement^="bottom"] > .tippy-arrow::before {
  border-bottom-color: var(--tooltip-bg);
}
.tippy-box[data-theme~="sm"][data-placement^="left"] > .tippy-arrow::before {
  border-left-color: var(--tooltip-bg);
}
.tippy-box[data-theme~="sm"][data-placement^="right"] > .tippy-arrow::before {
  border-right-color: var(--tooltip-bg);
}

.export-container {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  height: 100%;
  overflow: hidden;
}

.export-section-label {
  font-weight: bold;
  margin-bottom: 0.4rem;
  margin-top: 0.4rem;
}

.export-option {
  display: flex;
  flex-direction: row;
  gap: 0.25rem;
  align-items: center;
  padding: 0.2rem 0.25rem;
}

.export-output {
  flex: 1;
  border-radius: 0.25rem;
  background-color: var(--secondary-bg);
  border: 0.05rem solid var(--secondary-border);
  padding: 0.25rem;
  white-space: pre-wrap;
  word-break: break-all;
  font-family: monospace;
  font-size: 0.75rem;
  overflow: auto;
  tab-size: 2;
}

.export-output:hover {
  background-color: var(--secondary-bg-hover);
}

.animated .export-output {
  transition: 0.1s cubic-bezier(0.39, 0.575, 0.565, 1);
}

.icon-container {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  padding-top: 0.125rem;
  border-bottom: 0.05rem solid;
  border-image-slice: 1;
}

.eq-icon {
  border-radius: 0.2rem;
}

.animated .eq-icon {
  transition: 0.1s cubic-bezier(0.39, 0.575, 0.565, 1);
}

.eq-icon.disabled:not(:hover) {
  fill: #888;
}

.eq-icon:not(:hover) {
  background-color: rgba(0, 0, 0, 0) !important;
}

.eq-info-container {
  border-top: 0.05rem solid;
  border-image-slice: 1;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.6rem;
  padding: 0.125rem 0.6rem;
  margin: 0;
  font-size: 0.75rem;
}

.eq-reset {
  margin-left: auto;
  margin-right: 1rem;
  color: rgba(255, 58, 58, 0.8);
  padding: 0px 0.25rem;
  border-radius: 0.2rem;
}

.animated .eq-reset {
  transition: 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.875);
}

.eq-reset:hover {
  background: rgba(255, 58, 58, 0.2);
}

.eq-info {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.25rem;
}

.eq-info-value {
  width: 5rem;
}

.eq-info-value.inlineEdit[contenteditable="true"] {
  border: none;
  min-width: 5rem;
  text-align: left;
  border-radius: 0.2rem;
  padding: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
  caret-color: auto;
}

.eq-info-value.inlineEdit[contenteditable="true"]:hover {
  background: rgba(0, 135, 203, 0.082);
}

.eq-info-value.inlineEdit[contenteditable="true"]:focus {
  background: rgba(0, 135, 203, 0.082);
}

.eq-container {
  display: flex;
  flex-direction: column;
}

input[type="color"] {
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background: none;
  border: 0;
  cursor: pointer;
  height: 1.2rem;
  padding: 0;
  width: 1.8rem;
}

::-webkit-color-swatch-wrapper {
  padding: 0;
}

::-webkit-color-swatch {
  border: 0.05rem rgb(105, 105, 105) solid;
  border-radius: 0.2rem;
}

::-moz-color-swatch,
::-moz-focus-inner {
  border: 0;
}

::-moz-focus-inner {
  padding: 0;
}

.update-popup {
  position: absolute;
  right: 1rem;
  bottom: 1rem;
  z-index: 10;
  background-color: var(--primary-bg);
  border-radius: 0.6rem;
  padding: 0.6rem;
  transition: 0.3s ease-out;
  user-select: none;
  cursor: pointer;
  transform-origin: bottom right;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.25rem;
}

.update-popup.exiting {
  transform: translateX(3rem);
  opacity: 0;
}

.update-popup .title {
  font-weight: bold;
  text-align: center;
}

.update-options {
  display: flex;
  flex-direction: row;
  gap: 0.6rem;
  align-items: center;
  justify-content: space-around;
  width: 100%;
  margin-top: 0.25rem;
}

.update-options button {
  max-width: 6rem;
  flex: 1;
}

.animated .update-popup {
  transition: 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.875);
}
.animated .update-popup:hover {
  scale: 1.01;
  background-color: var(--primary-bg-active);
}

.sync-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
}
/* ... */

